fixing the nav buttons on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@ body{
   min-height: 100vh;
   font-size: 1rem;
   background-color:var(--BG);
-  overflow-y: hidden
 }
 
 #root{
   min-height: 100vh;
   display: grid;
+  position: relative;
 }
 
 :root{
@@ -304,7 +304,7 @@ input[type=number]::-webkit-outer-spin-button {
   }
 
   .container{
-    height: calc(100vh-1em);
+    min-height: calc(100vh-1em);
     display: flex;
     margin: 1em;
   }
@@ -363,6 +363,7 @@ input[type=number]::-webkit-outer-spin-button {
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.10);
   border-radius: 10px;
   margin-top: -4.5em;
+  margin-bottom: 8em;
 }
 
 .step-title{
@@ -739,6 +740,11 @@ input:checked + .slider:before {
 
 /* Nav Buttons */
 
+.col{
+  display: flex;
+  flex-direction: column;
+}
+
 .nav-buttons{
   background: white;
   box-shadow: 0px 25px 40px -20px rgba(0, 0, 0, 0.10);
@@ -749,6 +755,8 @@ input:checked + .slider:before {
   bottom: 0;
   left: 0;
   right: 0;
+  margin-top: auto;
+  z-index: 1;
 }
 
 
